--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8090
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/myschema
+    username: root
+    password: K@rthik@3344
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
