created api to save image data.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/myschema
     username: root
     password: K@rthik@3344
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
 
